[fix] Collapsed expanded tickets in the Testing Report before they are closed and prevented them from being expanded again while waiting on the server's response

--- a/app/assets/stylesheets/application/testing_notes.css.scss
+++ b/app/assets/stylesheets/application/testing_notes.css.scss
@@ -56,6 +56,7 @@
       .label-inverse { background-color: black; }
       &.ticket-due-date { text-decoration: none; }
     }
+    tr.deleting { opacity: 0.2 !important; }
     tr.ticket-testing-notes td { border-top: none; border-bottom: 2px solid #222; }
     tr.expanded, tr.ticket-testing-notes { 
       td { background-color: #505050; }
